--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -22,6 +22,7 @@ jobs:
           IFS='/' read -ra PARTS <<< "$BRANCH_NAME"
           ticket_id=${PARTS[2]}
           echo "TICKET_ID=$ticket_id" >> $GITHUB_ENV
+          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
 
       - name: Display Ticket ID
         run: |
@@ -52,7 +53,7 @@ jobs:
                 mkdir testt
                 mkdir ${{ env.TICKET_ID }}
                 cd ${{ env.TICKET_ID }}
-                git clone git@github.com:abhishek-charlee/test.git -b ${GITHUB_REF#refs/heads/}
+                git clone git@github.com:abhishek-charlee/test.git -b ${BRANCH_NAME}
                 ls
             fi
 
