--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -50,10 +50,9 @@ jobs:
                 ls
             else
                 echo "Directory does not exist."
-                mkdir testt
                 mkdir ${{ env.TICKET_ID }}
                 cd ${{ env.TICKET_ID }}
-                git clone git@github.com:abhishek-charlee/test.git -b ${BRANCH_NAME}
+                git clone git@github.com:abhishek-charlee/test.git -b ${{ env.BRANCH_NAME }}
                 ls
             fi
 
