--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -18,11 +18,15 @@ jobs:
 
       - name: Extract Ticket ID
         run: |
-          BRANCH_NAME=${GITHUB_REF#refs/heads/}
-          IFS='/' read -ra PARTS <<< "$BRANCH_NAME"
-          ticket_id=${PARTS[2]}
-          echo "TICKET_ID=$ticket_id" >> $GITHUB_ENV
-          echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
+          branch_name="${GITHUB_REF##refs/heads/}"
+          echo "BRANCH_NAME=$branch_name" >> $GITHUB_ENV
+          if [[ $branch_name =~ ([-_]?[0-9]+[-_]?[^0-9]*)$ ]]; then
+            ticket_id="${BASH_REMATCH[1]}"
+            echo "Ticket ID: $ticket_id"
+            echo "TICKET_ID=$ticket_id" >> $GITHUB_ENV
+          else
+            echo "No valid ticket ID found in the branch name."
+          fi
 
       - name: Display Ticket ID
         run: |
