--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -42,7 +42,7 @@ jobs:
         run: |
           echo "🎫 Ticket ID: $TICKET_ID"
 
-      - name: 🚢 Deploy
+      - name: 🚀 Deploy
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.TARGET_HOST }}
