--- a/.github/workflows/cd-dev.yml
+++ b/.github/workflows/cd-dev.yml
@@ -9,10 +9,7 @@ jobs:
     if: ${{ contains(github.event.head_commit.message, 'please deploy') }}
     steps:
       - name: 🔍 Verify Deployment commit
-        run: |
-          PORT_NUMBER=$(echo "${{ github.event.head_commit.message }}" | grep -oP 'please deploy to port \K\d+')
-          echo "PORT_NUMBER=${PORT_NUMBER}" >> $GITHUB_ENV
-          echo "The commit message contains a deployment request to port ${PORT_NUMBER}. Deploying to the respective environment ..."
+        run: echo "The commit message contains a deployment request, hence deploying to respective environment ... "
 
   deploy-to-qa:
     runs-on: ubuntu-latest
@@ -34,8 +31,11 @@ jobs:
             echo "No valid ticket ID found in the branch name."
           fi
 
-      - name: 🎫 Port and ticket
-        run: echo  ${{ env.PORT_NUMBER }}
+      - name: 🎫 Extract Port Number
+        run: |
+          PORT_NUMBER=$(echo "${{ github.event.head_commit.message }}" | grep -oP 'please deploy to port \K\d+')
+          echo  Port Number: ${{ env.PORT_NUMBER }}
+          echo "PORT_NUMBER=${PORT_NUMBER}" >> $GITHUB_ENV
 
       - name: Set DEPLOYMENT_LOCATION # used for the slack notification script
         run: |
